--- a/frontend/src/assets/css/navbar.css
+++ b/frontend/src/assets/css/navbar.css
@@ -126,10 +126,11 @@ body {
   }
   
   .sub-nav {
-    border: 1px solid #333;
+    /* border: 1px solid #333; */
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: black;
+    opacity: 70%;
     border-radius: 5px;
     padding: 5px 5px;
     list-style: none;
